más validación y retoques

--- a/TrianaTourist/src/main/resources/errores.properties
+++ b/TrianaTourist/src/main/resources/errores.properties
@@ -1,3 +1,4 @@
-pointOfInteres.location.format=El formato de localizción introducido no es correcto.
-name.unique=El nombre no debe existir, pruebe con otro.
-pointOfInterest.photo.unique=No se pueden repetir las fotos.
+pointOfInteres.location.format=El formato de localización introducido no es correcto. Ej: "11.76423,-31.67892" [-180,180].
+name.unique=El nombre no puede repetirse, pruebe con otro.
+pointOfInterest.photo.unique=No puede haber dos o más fotos iguales.
+object.notNull=No puede dejarse vacío el campo
